--- a/XamJam.PicSelector/Plugin.XamJam.PicSelector.nuspec
+++ b/XamJam.PicSelector/Plugin.XamJam.PicSelector.nuspec
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata minClientVersion="2.8.3">
 		<id>Xam.Plugins.XamJam.PicSelector</id>
-		<version>0.0.1-alpha</version>
+		<version>0.0.2-alpha</version>
 		<title>PicSelector: Get a Pic, Edit it a bit (i.e. cropping), Select it.</title>
     <authors>Jason C. HandUber, Dr. Catherine Zanbaka</authors>
     <owners>Jason C. HandUber, Dr. Catherine Zanbaka</owners>
@@ -39,8 +39,8 @@
 		</dependencies>
 	</metadata>
 	<files>
-		<file src="Plugin.XamJam.PicSelector\bin\Release\Plugin.XamJam.PicSelector.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.PicSelector.dll" />
-		<file src="Plugin.XamJam.PicSelector\bin\Release\Plugin.XamJam.PicSelector.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.PicSelector.xml" />
-		<file src="Plugin.XamJam.PicSelector\bin\Release\Plugin.XamJam.PicSelector.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.PicSelector.pdb" />
+		<file src="bin\Release\XamJam.PicSelector.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\XamJam.PicSelector.dll" />
+		<!--<file src="bin\Release\XamJam.PicSelector.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\XamJam.PicSelector.xml" />-->
+		<file src="bin\Release\XamJam.PicSelector.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\XamJam.PicSelector.pdb" />
 	</files>
 </package>
