--- a/XamJam.Nav/packages.config
+++ b/XamJam.Nav/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fody" version="1.29.4" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="MR.Gestures" version="1.3.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="PropertyChanged.Fody" version="1.51.3" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
   <package id="Softlion.XamSvg" version="2.3.1.4" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Vapolia.XamSvg.Forms" version="2.3.0.8" targetFramework="portable45-net45+win8+wpa81" />
