--- a/XamJam.Wall/XamJam.Wall.csproj
+++ b/XamJam.Wall/XamJam.Wall.csproj
@@ -48,6 +48,9 @@
       <HintPath>..\packages\MR.Gestures.1.3.5\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\MR.Gestures.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Plugin.XamJam.Screen.Abstractions">
+      <HintPath>..\XamJam.Screen\Plugin.XamJam.Screen.UWP\bin\Debug\Plugin.XamJam.Screen.Abstractions.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xamarin.Forms.2.3.1.114\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
       <Private>True</Private>
@@ -72,10 +75,6 @@
     <ProjectReference Include="..\XamJam.BugHound\Plugin.XamJam.BugHound\Plugin.XamJam.BugHound.csproj">
       <Project>{54997076-792F-4AAF-82C0-EDE69ADF38DD}</Project>
       <Name>Plugin.XamJam.BugHound</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\XamJam.Screen\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
-      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
-      <Name>Plugin.XamJam.Screen.Abstractions</Name>
     </ProjectReference>
     <ProjectReference Include="..\XamJam.Screen\Plugin.XamJam.Screen\Plugin.XamJam.Screen.csproj">
       <Project>{a6fcef44-d2ba-42c7-b3cb-13667bcd7b54}</Project>
