--- a/XamJam.Util/packages.config
+++ b/XamJam.Util/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fody" version="1.29.4" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="portable45-net45+win8+wpa81" />
   <package id="PropertyChanged.Fody" version="1.51.3" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
   <package id="Xam.Plugins.XamJam.BugHound" version="0.0.1-alpha" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+win8+wpa81" />
