--- a/XamJam.Demo/XamJam.Demo.Droid/packages.config
+++ b/XamJam.Demo/XamJam.Demo.Droid/packages.config
@@ -13,5 +13,7 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.FFImageLoading" version="2.1.7" targetFramework="monoandroid60" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.1.7" targetFramework="monoandroid60" />
   <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="monoandroid60" />
 </packages>
