--- a/XamJam.Demo/XamJam.Demo/XamJam.Demo.csproj
+++ b/XamJam.Demo/XamJam.Demo/XamJam.Demo.csproj
@@ -39,12 +39,16 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\DemoImageWallItemViewModel.cs" />
     <Compile Include="ViewModel\DemoImageWallViewModel.cs" />
     <Compile Include="ViewModel\DemoImageSingleViewModel.cs" />
     <Compile Include="ViewModel\DemoRatingsViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="View\DemoImageSingleView.xaml.cs">
       <DependentUpon>DemoImageSingleView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\DemoImageWallItemView.xaml.cs">
+      <DependentUpon>DemoImageWallItemView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\DemoImageWallView.xaml.cs">
       <DependentUpon>DemoImageWallView.xaml</DependentUpon>
@@ -67,6 +71,18 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FFImageLoading, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xamarin.FFImageLoading.2.1.7\lib\portable-net45+win8+wpa81+wp8\FFImageLoading.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FFImageLoading.Forms, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xamarin.FFImageLoading.Forms.2.1.7\lib\portable-net45+win8+wpa81+wp8\FFImageLoading.Forms.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FFImageLoading.Platform, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xamarin.FFImageLoading.2.1.7\lib\portable-net45+win8+wpa81+wp8\FFImageLoading.Platform.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MR.Gestures, Version=1.3.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>$(SolutionDir)\packages\MR.Gestures.1.3.5\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\MR.Gestures.dll</HintPath>
       <Private>True</Private>
@@ -145,6 +161,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="View\DemoRatingsView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View\DemoImageWallItemView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
