--- a/XamJam.Demo/XamJam.Demo.Droid/packages.config
+++ b/XamJam.Demo/XamJam.Demo.Droid/packages.config
@@ -3,6 +3,9 @@
   <package id="Fody" version="1.29.2" targetFramework="monoandroid70" developmentDependency="true" />
   <package id="MR.Gestures" version="1.3.5" targetFramework="monoandroid60" />
   <package id="PropertyChanged.Fody" version="1.51.3" targetFramework="monoandroid70" developmentDependency="true" />
+  <package id="SkiaSharp" version="1.54.1" targetFramework="monoandroid70" />
+  <package id="SkiaSharp.Views" version="1.54.1-beta1" targetFramework="monoandroid70" />
+  <package id="SkiaSharp.Views.Forms" version="1.54.1-beta1" targetFramework="monoandroid70" />
   <package id="Softlion.XamSvg" version="2.3.2.4" targetFramework="monoandroid70" />
   <package id="Vapolia.XamSvg.Forms" version="2.3.2.4" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
